Updates to Java 21.