@@ -25,6 +25,7 @@
   </modules>
 
   <properties>
+    <java.version>21</java.version>
     <skip.apple.frameworks>true</skip.apple.frameworks>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -44,7 +45,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>2.3.1</version>
+          <version>3.14.1</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -96,12 +97,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-	  <compilerArgs>
-	    <compilerArg>--add-exports</compilerArg>
-	    <compilerArg>java.base/sun.security.action=ALL-UNNAMED</compilerArg>
-	  </compilerArgs>
+          <release>${java.version}</release>
         </configuration>
       </plugin>
       <plugin>
@@ -143,6 +139,12 @@
         <groupId>com.webobjects</groupId>
         <artifactId>JavaWebObjects</artifactId>
         <version>${webobjects.version}</version>
+  	    <exclusions>
+  	      <exclusion>
+  	        <groupId>com.webobjects</groupId>
+  	        <artifactId>JavaXML</artifactId>
+  	      </exclusion>
+  		</exclusions>
       </dependency>
       <dependency>
         <groupId>com.webobjects</groupId>
